# gis-form

./: .gitignore  CMakeLists.txt  README.md
resources/: icons.qrc
src/: App.cpp  App.h  App.ui  SourceList.cpp  SourceList.h  SourceList.hpp  ToolInfo.cpp  ToolInfo.hpp  main.cpp
